style.css
/* ... */
.header__ham-close span {
  margin: 0;
}

.header__ham-close span:first-child {
  -webkit-transform: translate(0, 0.2rem) rotate(135deg);
  -ms-transform: translate(0, 0.2rem) rotate(135deg);
  transform: translate(0, 0.2rem) rotate(135deg);
}

.header__ham-close span:nth-child(2) {
  -webkit-transform: translate(-2rem);
  -ms-transform: translate(-2rem);
  transform: translate(-2rem);
  opacity: 0;
}

.header__ham-close span:last-child {
  -webkit-transform: translate(0, -0.2rem) rotate(-135deg);
  -ms-transform: translate(0, -0.2rem) rotate(-135deg);
  transform: translate(0, -0.2rem) rotate(-135deg);
}

.header__bg {
  background-image: -o-linear-gradient(175deg, #002345, #2d567d);
  background-image: linear-gradient(275deg, #002345, #2d567d);
  width: 4rem;
  height: 4rem;
  position: fixed;
  top: 4rem;
  left: 4rem;
  border-radius: 100rem;
  z-index: 1000;
  -webkit-transition: all 0.5s;
  -o-transition: all 0.5s;
  transition: all 0.5s;
}

.expand-bg {
  -webkit-transform: scale(180);
  -ms-transform: scale(180);
  transform: scale(180);
}

.header__nav {
  position: fixed;
  top: -100%;
  left: 50%;
  z-index: 1500;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  -webkit-transition: all 0.8s;
  -o-transition: all 0.8s;
  transition: all 0.8s;
}

.show-nav {
  top: 50%;
  overflow: auto;
  height: 100%;
  padding: 3rem;
  padding-top: 12rem;
}

.header__nav-item {
  color: white;
  text-align: center;
  margin-bottom: 3rem;
}

.header__nav-item span {
  display: block;
  text-transform: uppercase;
  font-size: 3.6rem;
  font-weight: 300;
  margin-bottom: 1.5rem;
}

.header__nav-item ul {
  list-style: none;
}

.header__nav-link {
  color: white;
  text-decoration: none;
  font-size: 1.8rem;
  font-weight: 700;
  margin-bottom: 0.5rem;
  display: block;
  letter-spacing: normal;
  -webkit-transition: all 0.5s;
  -o-transition: all 0.5s;
  transition: all 0.5s;
}

.header__nav-link:hover {
  letter-spacing: 2px;
}

/* FOOTER */
.footer {
  min-height: 8rem;
  border-top: 1px solid rgba(0, 0, 0, 0.4);
}

.footer__content {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin: 0 3rem;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 8rem;
}

.footer__content span {
  font-size: 1.6rem;
  font-weight: 200;
  color: black;
}

.footer__content a {
  font-size: 1.6rem;
  text-decoration: none;
  text-transform: uppercase;
  font-weight: 200;
  color: black;
}

/* HERO */
.hero {
  position: relative;
  width: 100%;
  min-height: 98rem;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
}

.hero__text {
  position: absolute;
  top: 35%;
  left: 17rem;
}

.hero__text-intro {
  font-size: 4.8rem;
  display: block;
  -webkit-animation-name: slideInFromLeft;
  animation-name: slideInFromLeft;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
}

.hero__text h1 {
  font-size: 6.6rem;
  font-weight: 400;
  margin: 1rem 0;
  -webkit-animation-name: slideInFromLeft;
  animation-name: slideInFromLeft;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
}

.hero__text-desc {
  font-size: 5.3rem;
  font-style: italic;
  font-weight: 100;
  display: block;
  margin-bottom: 1.2rem;
  -webkit-animation-name: slideInFromLeft;
  animation-name: slideInFromLeft;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
}

.hero__cta {
  position: absolute;
  left: 50%;
  bottom: 2rem;
  -webkit-transform: translate(-50%, 0);
  -ms-transform: translate(-50%, 0);
  transform: translate(-50%, 0);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.hero__cta span {
  font-size: 4rem;
  margin-bottom: 1rem;
}

.hero__cta-icon {
  -webkit-animation-name: fadeInBottom;
  animation-name: fadeInBottom;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.hero__icon {
  width: 3rem;
  height: 3rem;
}

.hero__text .line__dots {
  position: absolute;
  left: -4rem;
  -webkit-animation-name: slideInFromLeft;
  animation-name: slideInFromLeft;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-delay: 0.3s;
  animation-delay: 0.3s;
}

.hero .grid__dots {
  position: absolute;
  top: -1rem;
  left: -2rem;
}

.hero .ios__image {
  position: absolute;
  bottom: 0;
  right: 0;
}

.hero .p__figure-large {
  position: absolute;
  top: 4rem;
  right: 8rem;
}

.hero .p__figure-small {
  position: absolute;
  top: 10rem;
  right: 37rem;
}

@media only screen and (max-width: 1400px) {
  .hero .ios__image {
    position: absolute;
    width: 30rem;
    bottom: 0;
    right: 0;
  }
}

@media only screen and (max-width: 1100px) {
  .hero .p__figure-large {
    display: none;
  }

  .hero .p__figure-small {
    display: none;
  }
}

@media only screen and (max-width: 1000px) {
  .hero {
    min-height: 100vh;
  }

  .hero__text {
    left: 8rem;
  }

  .hero .ios__image {
    width: 35rem;
  }
}

@media only screen and (max-width: 600px) {
  .hero__text {
    left: 3rem;
    margin-right: 3rem;
  }

  .hero__text span {
    font-size: 3.5rem;
  }

  .hero__text h1 {
    font-size: 4.8rem;
  }

  .hero__text-desc {
    font-size: 3.8rem;
  }

  .hero__cta span {
    font-size: 3rem;
  }

  .hero__icon {
    width: 2.5rem;
    height: 2.5rem;
  }
}
/* ... */

